--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,1 +1,14 @@
-# https://www.playframework.com/documentation/latest/Configuration
+include "application.common.conf"
+
+slick {
+  dbs {
+    default {
+      profile = "slick.jdbc.H2Profile$"
+
+      db {
+        driver = "org.h2.Driver"
+        url = "jdbc:h2:mem:play;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=false"
+      }
+    }
+  }
+}
