Implementing the VideoService

--- a/conf/application.common.conf
+++ b/conf/application.common.conf
@@ -3,6 +3,11 @@ videoRepository {
     defaultPath = "/Users/ruchira/Downloads"
     defaultPath = ${?DEFAULT_PATH}
   }
+
+  query {
+    pageSize = 25
+    pageSize = ${?QUERY_PAGE_SIZE}
+  }
 }
 
 play {
