Adding a blocking execution context

--- a/conf/application.common.conf
+++ b/conf/application.common.conf
@@ -23,3 +23,11 @@ play {
     enabled = []
   }
 }
+
+blocking-execution-context {
+  executor = "thread-pool-executor"
+  throughput = 1
+  thread-pool-executor {
+    fixed-pool-size = 12
+  }
+}
